// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
no error

======
ERROR: (ter-no-tabs) /src/tslint-eslint-rules/ter-no-tabs/test.ts[2, 1]: Unexpected tab character.

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
if (true) {
  // <--- this indentation
}

======
if (true) {
	// <--- this indentation
}

>>>>>> after
"
`;
